resulto falta mover codigo

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,10 @@ dependencies {
     annotationProcessor 'io.vertx:vertx-codegen:3.8.5:processor'
     annotationProcessor 'io.vertx:vertx-web-api-service:3.8.5'
     compile 'io.vertx:vertx-web-api-service:3.8.5'
-    compile 'io.vertx:vertx-mysql-client:3.8.5'
+//    compile 'io.vertx:vertx-mysql-client:3.8.5'
+    compile 'io.vertx:vertx-jdbc-client:3.8.5'
+    compile group: 'org.hsqldb', name: 'hsqldb', version: '2.5.0'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
 }
 
 
